add background image

--- a/views/layout.html
+++ b/views/layout.html
@@ -14,8 +14,8 @@
             font-family: Arial;
         }
 
-        p {
-            background-image: url(ninja-background.png);
+        body {
+            background-image: url(/ninja-background.png);
         }
 
         /*center the terminal and button*/
