split welcome logo and welcome text with a while loop, and give the choice to read story behind app

--- a/views/layout.html
+++ b/views/layout.html
@@ -190,7 +190,9 @@
         }
     </style>
 </head>
-
+<body background="/ninja-background.png"> <br>
 <main id="main-container">@{body}</main>
 
+
+</body>
 </html>
