--- a/views/layout.html
+++ b/views/layout.html
@@ -12,8 +12,9 @@
     <style>
         body {
             font-family: Arial;
+            margin: 0;
+            overflow: hidden;
         }
-
         /*center the terminal and button*/
         #main-container {
             align-items: center;
