fix background image

--- a/views/layout.html
+++ b/views/layout.html
@@ -32,7 +32,7 @@
             top: 0;
             width: 100%;
             z-index: -10;
-            background-image: url("/ninja-background.png");
+            background-image: url(https://cdn.gencraft.com/prod/user/b2f5cb13-c7f3-4839-a104-363eed95f88b/3c29229d-9880-4a49-a9b8-b70afa0154a6/images/image1_0.jpg?Expires=1703423577&Signature=dNlghsNanWUURNGKISFgi6MXxCJKnNbsAR4RpfuY5pIZrTU9sUvCONTPeQrAJV9fwe-jYRENRpvutF~BLFbZH5HeeqdSDrgJY~cR6CHRHQapbrdgHnTpsKPkKEMukmrJDbvCOK6nIIaDTuZLgE94D4Dr5GtWZqxRXv0DVisZxxT2JHgwdlbyZs2rTzv5oxrr~PChoFg1NhmDmCev9PEcyhjzj9lEE28dATFNeRP2Sir45rBO7kGEe7ZUvPWl5iOe3Q-07Z2LlmfIUj99u3HqcPqVuFtWBwezGzVna4KZxt1~D3OPIcUknNW6WigrWjsNbkPnXG9xXKsxVtRyb3e9qQ__&Key-Pair-Id=K3RDDB1TZ8BHT8);
             background-size: cover;
             background-repeat: no-repeat;
         }
