add favicon and title text

--- a/views/layout.html
+++ b/views/layout.html
@@ -8,7 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <title>Python Terminal by Code Institute</title>
+    <!-- Added web hosted favicon -->
+    <link rel='icon' sizes="any"
+    href="https://cdn.gencraft.com/prod/user/b2f5cb13-c7f3-4839-a104-363eed95f88b/3c29229d-9880-4a49-a9b8-b70afa0154a6/images/image0_0.jpg?Expires=1703426910&Signature=HSp59GHbYU73Vp~V0rdl4EgwV7j3JbC7jBtbBPpmzJYSA5h0dgF~wMhdbAhySMVnjhmzgKhvmDE05iQrarF71zENoamWXkiEfjsY29QsmOeMaxbZ2Unh-IyeAe59p0PAQiCGgYr5M9GbWyRTL77i4mi02ShmdG1sphYcqzdLhfz8ugVH9xITzMscyIkDZTTGPeQunMTnoCF-i7IJWfQf~ufLnD-8qXFUguzc9BwK4JJcpFahWAMbUtEDExUxtD4~wKpQMdE5Ktk5JX7IN5j7KDD2uqAX59xfCGSGX2DI1IIYMtATRDUssAg-Y0ABd6IMaF4WXs8HN09QL7dl14KE2Q__&Key-Pair-Id=K3RDDB1TZ8BHT8" />
+    <title>The Cosmic Ninja Chronicles</title>
     <style>
         body {
             font-family: Arial;
