Try to make print output have a typewriter effect

--- a/views/index.html
+++ b/views/index.html
@@ -8,11 +8,24 @@
             rows: 24
         });
         term.open(document.getElementById('terminal'));
-        term.writeln('Running startup command: python3 run.py');
-        term.writeln('');
+
+        // tells what to be printed
+        var textToPrint = 'Running startup command: python3 run.py';
+        var currentIndex = 0;
+
+        //function to print typewriter effect
+        function printText() {
+            if (currentIndex < textToPrint.length) {
+                term.write(textToPrint.charAt(currentIndex));
+                currentIndex++;
+                setTimeout(printText, 2); // Delay of 2ms between characters
+            }
+        }
+        // prints the defined text
+        printText();
 
         // stop it from automatically scrolling to the bottom of text
-        term.scrollToBottom = function () {};
+        term.scrollToBottom = function () { };
 
         var ws = new WebSocket(location.protocol.replace('http', 'ws') + '//' + location.hostname + (location.port ? (
             ':' + location.port) : '') + '/');
