more tweaks to the typewriter print output effect

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
             rows: 24
         });
         term.open(document.getElementById('terminal'));
-        term.writeln('Running startup command: python3 run.py');
+        var textToPrint = 'Running startup command: python3 run.py';
         // tells what to be printed
         var currentIndex = 0;
 
