--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,11 @@
             rows: 24
         });
         term.open(document.getElementById('terminal'));
-        var textToPrint = 'Running startup command: python3 run.py\n\n';
+
         // tells what to be printed
         var currentIndex = 0;
-
+        var textToPrint = 'Running startup command: python3 run.py';
+        
         //function to print typewriter effect
         function printText() {
             if (currentIndex < textToPrint.length) {
