--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,46 @@
 <body>
+    <!--Audio control buttons-->
+    <div class="audio-control">
+        <button id="mute-button" aria-label="mute button"><i class="fa-solid fa-volume-xmark"></i></button>
+        <button id="unmute-button" aria-label="unmute button"><i class="fa-solid fa-volume-high"></i></button>
+    </div>
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
 
     <script>
+        const muteButton = document.getElementById('mute-button');
+        const unMuteButton = document.getElementById('unmute-button');
+
+        //When you press the 'Mute' or 'Unmute' button
+        muteButton.addEventListener('click', muteSound);
+        function muteColor(color) {
+            muteButton.style.background = color;
+        }
+        unMuteButton.addEventListener('click', unMuteSound);
+        function unMuteColor(color) {
+            unMuteButton.style.background = color;
+        }
+        var muteFlag = true;
+        function toggleMuteBoolean() {
+            console.log(muteFlag);
+            muteFlag = !muteFlag;
+            console.log(muteFlag);
+        }
+        //Mute / Unmute button color change
+        function muteSound() {
+            unMuteColor('#00000033');
+            muteColor('#FF10F0');
+            if (muteFlag === false) {
+                toggleMuteBoolean();
+            }
+        }
+        function unMuteSound() {
+            muteColor('#00000033');
+            unMuteColor('#FF10F0');
+            if (muteFlag === true) {
+                toggleMuteBoolean();
+            }
+        }
         var term = new Terminal({
             cols: 80,
             rows: 24
