add music player

--- a/views/layout.html
+++ b/views/layout.html
@@ -50,7 +50,12 @@
             border-radius: 50%;
             border: solid 1px #000000;
         }
-
+        /*Styling for music player*/
+        #music {
+            color: #FF10F0;
+            background-color: #000000;
+            border: solid 1px #FF10F0;
+        }
         /*style background image*/
         #background {
             height: 100vh;
