--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,12 @@
         <button id="mute-button" aria-label="mute button"><i class="fa-solid fa-volume-xmark"></i></button>
         <button id="unmute-button" aria-label="unmute button"><i class="fa-solid fa-volume-high"></i></button>
     </div>
+ <!-- Add an audio element -->
+ <audio id="music" controls>
+    <source src="https://soundcloud.com/sega-16bit-music/street-fighter-theme-of-chun-li?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mp3">
+    Your browser does not support the audio element.
+</audio>
+
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
 
