--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,8 @@
         <button id="unmute-button" aria-label="unmute button"><i class="fa-solid fa-volume-high"></i></button>
     </div>
  <!-- Add an audio element -->
- <audio id="music" controls>
-    <source src="https://soundcloud.com/sega-16bit-music/street-fighter-theme-of-chun-li?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mp3">
-    Your browser does not support the audio element.
-</audio>
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https://soundcloud.com/sega-16bit-music/street-fighter-theme-of-chun-li?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
 
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
