--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 <body>
-   
+    <button onclick="window.location.reload()">Run Program</button>
+    <div id="terminal"></div>
+
     <script>
-       
         var term = new Terminal({
             cols: 80,
             rows: 24
