--- a/views/layout.html
+++ b/views/layout.html
@@ -102,7 +102,7 @@
 
         .xterm .xterm-viewport {
             /* On OS X this is required in order for the scroll bar to appear fully opaque */
-            background-color: #000;
+            background-color: #00000000;
             overflow-y: scroll;
             cursor: default;
             position: absolute;
