--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <body>
     <button onclick="window.location.reload()">Run Program</button>
-    <audio controls autoplay muted loop>
-        <source src="/files/204 Theme of Chun-Li -SF IV Arrange-.mp3" type="audio/mpeg">
+    <audio controls autoplay loop>
+        <source src="/files/ninja-music.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
     <div id="terminal"></div>
