--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <body>
     <button onclick="window.location.reload()">Run Program</button>
-    <audio controls autoplay loop>
+    <audio preload controls autoplay muted loop>
         <source src="/files/ninja-music.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
