--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <body>
     <button onclick="window.location.reload()">Run Program</button>
     <audio preload controls autoplay muted loop>
-        <source src="/files/ninja-music.mp3" type="audio/mpeg">
+        <source src="../files/ninja-music.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
     <div id="terminal"></div>
