--- a/views/layout.html
+++ b/views/layout.html
@@ -196,7 +196,12 @@
 </head>
 
 <body id="background">
-    <main id="main-container">@{body}</main>
+    <main id="main-container">@{body}
+        <audio preload controls autoplay muted loop>
+            <source src="../files/ninja-music.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </main>
 
 
 </body>
