--- a/views/layout.html
+++ b/views/layout.html
@@ -198,7 +198,7 @@
 <body id="background">
     <main id="main-container">@{body}
         <audio preload controls autoplay muted loop>
-            <source src="../files/ninja-music.mp3" type="audio/mpeg">
+            <source src="../ninja-music.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
     </main>
