--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,9 @@
 <body>
     <button onclick="window.location.reload()">Run Program</button>
+    <audio preload controls muted loop>
+        <source src="../ninja-music.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
     <div id="terminal"></div>
 
     <script>
