--- a/views/layout.html
+++ b/views/layout.html
@@ -196,12 +196,7 @@
 </head>
 
 <body id="background">
-    <main id="main-container">@{body}
-        <audio preload controls autoplay muted loop>
-            <source src="../ninja-music.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-          </audio>
-    </main>
+    <main id="main-container">@{body}</main>
 
 
 </body>
