--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,6 @@
 <body>
     <button onclick="window.location.reload()">Run Program</button>
-    <audio preload controls loop>
-        <source src="../ninja-music.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-      </audio>
+    <iframe width=30% height=50 scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/401855004&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #FF10F0;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/sega-16bit-music" title="Sega Genesis 16-BIT" target="_blank" style="color: #FF10F0; text-decoration: none;">Sega Genesis 16-BIT</a> · <a href="https://soundcloud.com/sega-16bit-music/street-fighter-theme-of-chun-li" title="Street Fighter IV - Theme of Chun-Li" target="_blank" style="color: #030000; text-decoration: none;">Street Fighter IV - Theme of Chun-Li</a></div>
     <div id="terminal"></div>
 
     <script>
