--- a/views/layout.html
+++ b/views/layout.html
@@ -28,11 +28,11 @@
             align-items: center;
             display: flex;
             flex-direction: column;
+            height: 98%;
         }
 
         /*style background image*/
         #background {
-            height: 100vh;
             left: 0;
             position: fixed;
             top: 0;
