--- a/views/layout.html
+++ b/views/layout.html
@@ -20,7 +20,7 @@
         body {
             font-family: Arial;
             margin: 0;
-            overflow: hidden;
+            overflow:scroll;
         }
 
         /*center the terminal and button*/
@@ -29,6 +29,7 @@
             display: flex;
             flex-direction: column;
             height: 98%;
+            padding-bottom: 20px;
         }
 
         /*style background image*/
